--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "ejs-locals": "^1.0.2",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pg": "^8.0.2",
+    "psql": "0.0.1",
+    "request": "^2.88.2"
   }
 }
