--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "body-parser": "^1.19.0",
     "ejs-locals": "^1.0.2",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth": "^2.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^8.0.2",
     "psql": "0.0.1",
     "request": "^2.88.2"
